# tutorials

./: README.md  mlflow_models_tutorial.md  pyproject.toml
demos/asos/: README.md  Timo_MLproject  asos_MLproject  receipe.def  recipe.def  requirements.txt  run_container.sbatch  train.py  unicore-config.json
demos/hazard_mapping/: AnnKathrin_MLproject  Hazardmapping_MLproject  README.md  hazard_mapping_MLproject  receipe.def  receipe1.def  recipe.def  requirements.txt  run_container.sbatch  train.py  unicore-config.json
demos/seasonal_contrast/: Ankit_MLproject  Dockerfile  README.md  pretrain.py  receipe.def  recipe.def  requirements.txt  run_container.sbatch  seasonal_contrast_MLproject  train.py  unicore-config.json
demos/wine-quality-estimator/: README.md  environment.sh  run.py
demos/wine-quality-estimator/mlproject/: .gitattributes  Dockerfile  MLproject  recipe.def  train.py  unicore-config.json  unicore-config.yaml  wine-quality.csv
instructions/: user_guide.md
instructions/mlproject/: README.md
instructions/tracking/: README.md
tutorials/: user_guide.md
tutorials/containers/: README.md
tutorials/mlproject/: README.md
tutorials/tracking/: README.md
