[tool.poetry]
name = "mantik-tutorials"
version = "0.1.0"
description = ""
authors = ["Thomas Seidler <thomas.seidler@ambrosys.de>"]

[tool.poetry.dependencies]
python = "^3.7"
mantik = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
